--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://chibik1307.github.io/myWeather/",
+  "homepage": "https://chibik1307.github.io/myWeather",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b main -d build",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
